--- a/templates/JavaScript.xml
+++ b/templates/JavaScript.xml
@@ -1,5 +1,5 @@
 <templateSet group="JavaScript">
-  <template name="iife" value="(function() {&#10;&#10;$END$&#10;&#10;})();" description="creates IIFE" toReformat="false" toShortenFQNames="true">
+  <template name="iife" value="(function() {&#10;  $END$&#10;})();" description="creates IIFE" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="JAVA_SCRIPT" value="true" />
     </context>
